[flake8]
max-line-length = 99
exclude = mypy/codec/*
# Thing to ignore:
#   E251: spaces around default arg value (against our style)
#   E128: continuation line under-indented (too noisy)
#   F401: unused identifiers (useless, as it doesn't see inside # type: comments)
#   W601: has_key() deprecated (false positives)
#   E701: multiple statements on one line (colon) (we use this for classes with empty body)
#   W503: line break before binary operator
#   E704: multiple statements on one line (def)
#   E402: module level import not at top of file
#   B???: flake8-bugbear errors
ignore = E251,E128,F401,W601,E701,W503,E704,E402,B

[coverage:run]
branch = true
source = mypy
parallel = true

[coverage:report]
show_missing = true

[metadata]
# This seems to be used only by bdist_wheel.
# You need "pip3 install wheel".
# Then run "python3 setup.py bdist_wheel" to build a wheel file
# (and then upload that to PyPI).
requires-dist =
    typed-ast >= 0.6.3
    typing >= 3.5.3; python_version < "3.5"
